--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +13,9 @@
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "14.15.0"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/EstebanRestoy/xss_learner/issues"
