--- a/website/package.json
+++ b/website/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "better-sqlite3": "^7.4.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuid-token-generator": "^1.0.0"
   }
 }
